# talks

./: .gitignore  .gitmodules  README.md
2024-09-django-london-logfire/: README.md  pyproject.toml
2024-09-django-london-logfire/cat_bacon/: apps.py  models.py  urls.py  views.py
2024-09-django-london-logfire/cat_bacon/migrations/: 0001_initial.py
2024-09-django-london-logfire/cat_bacon/templates/: base.html
2024-09-django-london-logfire/logfire_django_demo/: settings.py  urls.py  wsgi.py
2024-12-boston-ae/: README.md
2024-sept-django-london-logfire/: .gitignore  create_many.py
2024-sept-django-london-logfire/cat_bacon/: admin.py  forms.py
2024-sept-django-london-logfire/cat_bacon/templates/: image.html  index.html
2024-sept-django-london-logfire/logfire_django_demo/: asgi.py
2025-02-ai-engineer-pydantic-ai/: README.md
2025-04-cli-demo/: cli.py  pyproject.toml
2025-04-data-council/: README.md  browser_mcp.py  browser_mcp_graph.py  memory_messages.py  memory_tools.py  pyproject.toml
2025-04-data-council/evals/: 02_add_custom_evaluators.py  04_compare_models.py  agent.py  custom_evaluators.py
2025-04-data-council/evals/datasets/: time_range_v1_schema.json  time_range_v2_schema.json
2025-05-16-fastapi-demo/: .gitignore  README.md  main.py  pyproject.toml
2025-05-16-fastapi-demo/src/: agent.py  app.py  mcp_agent.py
2025-05-16-fastapi-demo/tests/: evals.py
2025-05-odsc/: README.md  browser_mcp_graph.py  memory_messages.py  memory_tools.py  pyproject.toml
2025-05-odsc/evals/: 02_add_custom_evaluators.py  03_unit_testing.py  04_compare_models.py  custom_evaluators.py
2025-05-odsc/evals/datasets/: time_range_v1.yaml  time_range_v2.yaml
2025-05-pycon-us/: README.md  browser_mcp.py  ex.py
2025-05-pycon-us/evals/: 01_generate_dataset.py
2025-06-ai-engineer-mcp/: README.md  libs_mcp_client.py  make_slides.py  pypi_mcp_server.py  pyproject.toml  slides.template.html
2025-06-ai-engineer-mcp/static/: google_fonts_ibm_plex.css
2025-07-16-europython/: README.md
2025-07-16-europython/pydantic-ghost-writer/: README.md  input-ls1.json  input-ls2.json  input.json  input_good.json  main.py  pydantic_ghost_writer.py  pyproject.toml  t.py  textual_ui.py
2025-07-16-europython/pydantic-ghost-writer/ghost_writer/: __main__.py  input-ls1.json  main.py  mcp_server.py
2025-07-16-europython/pydantic-ghost-writer/ghost_writer/agents/: __init__.py  github.py  reviewer.py  shared.py  writer.py
2025-07-16-europython/pydantic-ghost-writer/prompts/reviewer/: blog_post.txt
2025-07-16-europython/pydantic-ghost-writer/prompts/shared/: brand_guidelines.txt  global_styleguide.txt  vocabulary.txt
2025-07-16-europython/pydantic-ghost-writer/prompts/writer/: blog_post.txt
2025-07-16-europython/slides/: index.html
2025-07-16-europython/slides/css/theme/source/: pydantic.scss
2025-07-16-europython/slides/css/theme/template/: theme.scss
2025-07-28-google-meetup/: README.md  libs_mcp_client.py  pypi_mcp_server.py
2025-07-28-google-meetup-mcp/: libs_mcp_client.py  pypi_mcp_server.py  pyproject.toml
2025-08-co/: README.md  agent.py  agent_reflection.py  libs_mcp_client.py  logfire_example.py  memory_messages.py  memory_tools.py  pyproject.toml
2025-08-co/evals/: agent.py  custom_evaluators.py
2025-08-co/evals/datasets/: time_range_v1.yaml
2025-11-ai-by-bay/: README.md  gateway.py  pyproject.toml  twenty_questions_temporal.py  workflows_activities.mermaid
2025-11-py-ai-nyc/: README.md  pyproject.toml
2025-11-py-ai-nyc/src/: agent.py  server.py
2025-12-15-early-bird/: README.md  libs_mcp_client.py  pypi_mcp_server.py  pyproject.toml
2025-12-16-py-ai/: README.md  pyproject.toml
2025-12-16-py-ai/src/: agent.py  server.py
2025-12-neurips/: README.md  main.py  pyproject.toml
2026-02-monty/: .gitignore  README.md  anthropic_previous_code.py  anthropic_prices.json  bs.py  groq_previous_code.py  groq_prices.json  main.py  main_evals.py  pyproject.toml  sub_agent.py  weather.py
2026-03-monty/: .gitignore  README.md  external_functions.py  main.py  pyproject.toml
2026-03-monty/.claude/: settings.json
2026-04-ai-engineer/: .gitignore  Makefile  README.md  adapter.py  cases.py  evals.py  help.md  index.html  main.py  pyproject.toml  task.py  task_man_var.py  web.py
2026-04-ai-engineer/.claude/: settings.json
2026-04-ai-engineer/cases/: ancestors_optimized.txt  golden_relations.json
2026-05-agentcon/: .gitignore  Makefile  README.md  agent_lighthouse.py  deck-v1.html  lighthouse_instructions.md  main.py  pyproject.toml  weather_agent.py
2026-05-agentcon/.claude/skills/: deckx
2026-05-agentcon/deck/: deck.mdx  deckx.toml  package.json  styles.css
2026-05-agentcon/deck/components/: AdvantagesChart.tsx  InstallLine.tsx  SandboxContinuum.tsx
2026-05-codemode/: ex_codemode.py  ex_online_eval.py  pyproject.toml
2026-05-pycon/: README.md  abstract.md  agent_calendar.py  deck-v1.html  hello_world.py  hello_world_plus.py  how-monty-works.md  pyproject.toml
2026-05-pycon-italy/: README.md  abstract.md  deck-v1.html  pyproject.toml  skills-lock.json  twenty_questions_optimized.py  twenty_questions_temporal_mv.py
2026-05-pycon-italy/deck/: deck.mdx  deckx.toml  package-lock.json
2026-05-pycon-italy/deck/components/: ArchitectureDiagram.tsx  FeatureGrid.tsx  PromptRound.tsx  ProposalExplanation.tsx  TraceObservability.tsx
2026-05-pycon/deck/: deck.mdx  deckx.toml  package.json  styles.css
2026-05-pycon/deck/components/: AstExample.tsx  BytecodeExample.tsx  CodemodeDiagram.tsx  HeapVmDiagram.tsx  HostLoopCode.tsx  HowOverview.tsx  ResolveExample.tsx  ToolUniverseCompare.tsx
2026-05-replay/: Makefile  README.md  abstract.md  deck-v1.html  pyproject.toml  twenty_questions_temporal.py
2026-05-replay/.agents/skills/deckx/: SKILL.md
2026-05-replay/deck/: README.md  deck.mdx  deckx.toml  package.json  styles.css
2026-05-replay/deck/components/: DurableAgentDiagram.tsx  LLMOpsSteps.tsx  PydanticStackPills.tsx  WorkflowSequence.tsx
