[project]
name = "2025-07-28-google-meetup"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.35.1",
    "logfire[httpx]>=4.0.0",
    "pydantic-ai>=0.4.7",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don"t format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"
