[project]
name = "2025-04-data-council"
version = "0"
description = "An Opinionated Blueprint for the Future of GenAI Applications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "devtools>=0.12.2",
    "logfire[asyncpg,httpx]>=4.0.1",
    "pydantic-ai>=0.4.10",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
include = ["**/*.py"]
venvPath = ".venv"

[dependency-groups]
dev = ["asyncpg-stubs>=0.30.1", "ruff>=0.11.6"]
