[project]
name = "chat-ui"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "logfire[fastapi,httpx]>=4.9.0",
    "markdown2>=2.5.4",
    "pip>=25.2",
    "pydantic-ai-slim[anthropic,openai,google,mcp,cli]>=1.21.0",
    "pyright>=1.1.405",
    "sse-starlette>=3.0.2",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "watchfiles>=1.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
docstring-code-format = false
quote-style = "single"
