[project]
name = "2026-03-monty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.0",
    "logfire>=4.27.0",
    "pydantic-ai>=1.67.0",
    "pydantic-monty>=0.0.8",
    "matplotlib>=3.10.0",
    "rich>=14.0.0",
    "mypy>=1.19.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.15.5",
]

# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
line-length = 120
include = [
    "**/*.py"
]

[tool.ruff.lint]
extend-select = [
    "Q",      # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RUF100", # https://docs.astral.sh/ruff/rules/unused-noqa/
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 14 }

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
venv = ".venv"
