[project]
name = "2026-04-ai-engineer"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.3",
    "gepa>=0.1.1",
    "logfire[fastapi]>=4.31.0",
    "pydantic-ai>=1.77.0",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "ruff>=0.15.9",
]
# https://beta.ruff.rs/docs/configuration/
[tool.ruff]
line-length = 120
include = [
    "**/*.py"
]

[tool.ruff.lint]
extend-select = [
    "Q",      # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RUF100", # https://docs.astral.sh/ruff/rules/unused-noqa/
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 14 }

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
venv = ".venv"
